<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/choose_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/choose_company_and_type"/>

    <TextView
        android:id="@+id/chosen_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:text="@string/chosen_company"/>

    <TextView
        android:id="@+id/chosen_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:text="@string/chosen_type"/>

    <Button
        android:id="@+id/button_cancel_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/cancel"/>

</LinearLayout>