<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Блок з назвою сторінки -->
    <LinearLayout
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingStart="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/black"
        android:paddingEnd="8dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/page_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/Title"
            android:textColor="@color/white"/>

    </LinearLayout>

    <!-- Основний блок -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Запрошення обрати тип товару та фірму -->
            <TextView
                android:id="@+id/choose_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:text="@string/choose_company_and_type"/>

            <!-- Обрана компанія -->
            <TextView
                android:id="@+id/chosen_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/chosen_company"/>

            <!-- Обраний тип товару -->
            <TextView
                android:id="@+id/chosen_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:text="@string/chosen_type"/>

            <!-- Вертикальні контейнери radiobutton -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <!-- Вибір фірми -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="5dp"
                    android:paddingStart="0dp">

                    <TextView
                        android:id="@+id/company_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"/>

                    <LinearLayout
                        android:id="@+id/company_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <!-- Вибір типу товару -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/type_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"/>

                    <LinearLayout
                        android:id="@+id/type_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Функціональні кнопки внизу -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/confirm"/>

    </LinearLayout>

</LinearLayout>